@@ -1,3 +1,3 @@
 class Stringable : interface_t {
-  method to_string : string ();
+  required method to_string : string ();
 }
