@@ -11,6 +11,8 @@ Revision history for SPVM
         [NON BACKWORD COMPATIBLE CHANGES]
         * Revert 0.9514 Methods of interfaces must have the names.
         * implement statement is renamed to interface statement.
+        * A interface type must have one required method.
+        * A callback type must have one required method.
 0.9514  2022-05-02
         [CHANGE]
         * Add no_compiler_api to SPVM::Builder::Config::Exe
